feat: migrate to physical notebook submission system
- Remove mandatory file upload for students (now submit physically in class)
- Add new fields to submissions: presented, presented_at, observations, is_late, justified_at, justified_by
- Create submission_grade_logs table for grade change audit
- Add bulk grade upload endpoint POST /api/v1/submissions/bulk-grade
- Remove TaskFileDTO, SubmissionFileDTO, CommentFileDTO and related services
- Update dashboard with real metrics (total tasks, submissions, average grade)
- Add ExcelProcessingService for mass grade imports
- Remove file validation from TaskServiceImpl (instructions no longer required)
- Update ValidationUtils to not require files on task creation
- Add findByDueDateBetween method to TaskRepository

BREAKING CHANGE: Students can no longer upload files; submissions are now physical notebook deliveries only